@@ -16,22 +16,22 @@ trigger:
 - master
 
 variables:
-  OJDKBUILD_JDK8_TAG: java-1.8.0-openjdk-1.8.0.272-1.b10
-  OJDKBUILD_JDK8_DEBUG_TAG: java-1.8.0-openjdk-debug-1.8.0.272-1.b10
-  OJDKBUILD_JDK8_32_TAG: java-1.8.0-openjdk-1.8.0.272-1.b10-x86
-  OJDKBUILD_JDK8_32_DEBUG_TAG: java-1.8.0-openjdk-debug-1.8.0.272-1.b10-x86
-  OJDKBUILD_JDK8_VS15_TAG: java-1.8.0-openjdk-1.8.0.272-1.b10-vs15
-  OJDKBUILD_JDK8_VS15_DEBUG_TAG: java-1.8.0-openjdk-debug-1.8.0.272-1.b10-vs15
+  OJDKBUILD_JDK8_TAG: java-1.8.0-openjdk-1.8.0.275-1.b01
+  OJDKBUILD_JDK8_DEBUG_TAG: java-1.8.0-openjdk-debug-1.8.0.275-1.b01
+  OJDKBUILD_JDK8_32_TAG: java-1.8.0-openjdk-1.8.0.275-1.b01-x86
+  OJDKBUILD_JDK8_32_DEBUG_TAG: java-1.8.0-openjdk-debug-1.8.0.275-1.b01-x86
+  OJDKBUILD_JDK8_VS15_TAG: java-1.8.0-openjdk-1.8.0.275-1.b01-vs15
+  OJDKBUILD_JDK8_VS15_DEBUG_TAG: java-1.8.0-openjdk-debug-1.8.0.275-1.b01-vs15
   OJDKBUILD_JDK8_RPMBUILD: 1
   OJDKBUILD_JDK11_TAG: java-11-openjdk-11.0.9.11-1
   OJDKBUILD_JDK11_DEBUG_TAG: java-11-openjdk-debug-11.0.9.11-1
-  OJDKBUILD_JDK11_RPMBUILD: 1
+  OJDKBUILD_JDK11_RPMBUILD: 0
   OJDKBUILD_JDK13_TAG: java-13-openjdk-13.0.4.8-1
   OJDKBUILD_JDK13_DEBUG_TAG: java-13-openjdk-debug-13.0.4.8-1
   OJDKBUILD_JDK13_RPMBUILD: 0
   OJDKBUILD_JDK15_TAG: java-15-openjdk-15.0.1.9-1
   OJDKBUILD_JDK15_DEBUG_TAG: java-15-openjdk-debug-15.0.1.9-1
-  OJDKBUILD_JDK15_RPMBUILD: 1
+  OJDKBUILD_JDK15_RPMBUILD: 0
 
 jobs:
 
@@ -202,7 +202,7 @@ jobs:
       popd || exit /b 1
       dir dist || exit /b 1
       if not "$(OJDKBUILD_JDK11_RPMBUILD)" == "0" tools\ghr\ghr.exe -t $(OJDKBUILD_GITHUB_TOKEN) -u ojdkbuild -r ojdkbuild -c $(Build.SourceVersion) $(OJDKBUILD_JDK11_DEBUG_TAG) dist || exit /b 1
-    enabled: true
+    enabled: false
 
 - job: jdk13
   timeoutInMinutes: 0
@@ -262,7 +262,7 @@ jobs:
         popd || exit /b 1
         dir dist || exit /b 1
         if not "$(OJDKBUILD_JDK15_RPMBUILD)" == "0" tools\ghr\ghr.exe -t $(OJDKBUILD_GITHUB_TOKEN) -u ojdkbuild -r ojdkbuild -c $(Build.SourceVersion) $(OJDKBUILD_JDK15_TAG) dist || exit /b 1
-      enabled: true
+      enabled: false
 
 - job: jdk15_debug
   timeoutInMinutes: 0
@@ -282,4 +282,4 @@ jobs:
         popd || exit /b 1
         dir dist || exit /b 1
         if not "$(OJDKBUILD_JDK15_RPMBUILD)" == "0" tools\ghr\ghr.exe -t $(OJDKBUILD_GITHUB_TOKEN) -u ojdkbuild -r ojdkbuild -c $(Build.SourceVersion) $(OJDKBUILD_JDK15_DEBUG_TAG) dist || exit /b 1
-      enabled: true
+      enabled: false
